--- a/SinExWebApp20256461/SinExWebApp20256461.csproj
+++ b/SinExWebApp20256461/SinExWebApp20256461.csproj
@@ -380,7 +380,7 @@
     <Content Include="Views\Shipments\Create.cshtml" />
     <Content Include="Views\Shipments\Delete.cshtml" />
     <Content Include="Views\Shipments\Details.cshtml" />
-    <Content Include="Views\Shipments\Edit.cshtml" />
+    <Content Include="Views\Shipments\EditEmployee.cshtml" />
     <Content Include="Views\Shipments\Index.cshtml" />
     <Content Include="Views\Shipments\GenerateHistoryReport.cshtml" />
     <Content Include="Views\Shipments\_ShipmentsSearchPartial.cshtml" />
@@ -424,6 +424,7 @@
     <Content Include="Views\Shipments\_InvoicesPagingPartial.cshtml" />
     <Content Include="Views\Shipments\GenerateInvoiceReport.cshtml" />
     <Content Include="Views\Shipments\_InvoicesSearchPartial.cshtml" />
+    <Content Include="Views\Shipments\EditCustomer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
