--- a/SinExWebApp20256461/SinExWebApp20256461.csproj
+++ b/SinExWebApp20256461/SinExWebApp20256461.csproj
@@ -302,7 +302,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\custom.js" />
+    <Content Include="Scripts\customs.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
