--- a/SinExWebApp20256461/Web.config
+++ b/SinExWebApp20256461/Web.config
@@ -8,6 +8,20 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="comp3111_team108@cse.ust.hk">
+
+        <network defaultCredentials="false" host="smtp.cse.ust.hk" enableSsl="true"
+         port="587" userName="comp3111_team108@cse.ust.hk"
+          password="team108#" />
+    </smtp>
+    </mailSettings>
+  </system.net>
+  
+  
+  
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SinExWebApp20256461-20170207125740.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SinExWebApp20256461Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SinExWebApp20256461Context-20170214121950; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SinExWebApp20256461Context-20170214121950.mdf" providerName="System.Data.SqlClient" />
