add partial unit test

--- a/SinExWebApp20256461/SinExWebApp20256461.csproj
+++ b/SinExWebApp20256461/SinExWebApp20256461.csproj
@@ -97,6 +97,10 @@
     <Reference Include="MigraDoc.RtfRendering">
       <HintPath>..\packages\MigraDoc.RtfRendering.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.6.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PdfSharp">
       <HintPath>..\packages\PdfSharp.dll</HintPath>
     </Reference>
