--- a/SinExWebApp20256461/Web.config
+++ b/SinExWebApp20256461/Web.config
@@ -13,9 +13,7 @@
     <mailSettings>
       <smtp deliveryMethod="Network" from="comp3111_team108@cse.ust.hk">
 
-        <network defaultCredentials="false" host="smtp.cse.ust.hk" enableSsl="true"
-         port="587" userName="comp3111_team108@cse.ust.hk"
-          password="team108#" />
+        <network defaultCredentials="false" host="smtp.cse.ust.hk" enableSsl="true" port="587" userName="comp3111_team108@cse.ust.hk" password="team108#" />
     </smtp>
     </mailSettings>
   </system.net>
