--- a/SinExWebApp20256461/packages.config
+++ b/SinExWebApp20256461/packages.config
@@ -35,6 +35,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NUnit" version="3.6.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
